<resources>
    <string name="app_name">Recipe App</string>
    <string name="welcome">Welcome to \n<b>Rec</b>ii<b>p</b>ii<b>e</b></string>
    <string name="please_signing_to_continue">Please signing to continue</string>
    <string name="continue_with_google">Continue with google</string>
    <string name="hey_user"><![CDATA[👋 Hey User]]></string>
    <string name="discover_tasty_and_healthy_receipt">Discover tasty and healthy receipt</string>
    <string name="popular_recipes">Popular Recipes</string>
    <string name="all_recipes">All recipes</string>
    <string name="recipeimage">recipeImage</string>
    <string name="dish_image">Dish Image</string>
    <string name="home">Home</string>
    <string name="favourite">Favourite</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="favourite_recipes">Favourite recipes</string>
    <string name="ingredients">Ingredients</string>
    <string name="onion">Onion</string>
    <string name="ingredients_img">ingredients_img</string>
    <string name="instructions">Instructions</string>
    <string name="llll">Lorem ipsum dolor sit amet consectetur. Sagittis facilisis aliquet aenean lorem ullamcorper et. Risus lectus id sed fermentum in. At porta sed ut lorem volutpat elementum mi sollicitudin. Laoreet tempor nullam velit dui amet mauris sed ac sem.</string>
    <string name="equipments">Equipments</string>
    <string name="equipments_img">equipments_img</string>
    <string name="quick_summary">Quick Summary</string>
    <string name="search_any_recipe">Search any recipe</string>
    <string name="kadhai_paneer">Kadhai paneer</string>
    <string name="previous_fragment">previous_fragment</string>
    <string name="shahi_paneer">shahi_paneer</string>
    <string name="get_similar_recipe">Get similar recipe</string>
    <string name="full_recipe">Full recipe</string>
    <string name="similar_recipes">Similar recipes</string>
</resources>