<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:background="#FFFFFF"
        android:layout_height="match_parent">


        <!-- ProgressBar - Centered on the screen -->
        <ProgressBar
            android:id="@+id/global_progress_bar"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:indeterminate="true"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/hey"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/inter"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/hey_user"
            android:textFontWeight="500"
            android:layout_marginTop="16dp"
            android:textColor="#282833"
            android:textSize="24sp"
            tools:ignore="UnusedAttribute" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/discover"
            android:fontFamily="@font/inter"
            app:layout_constraintTop_toBottomOf="@id/hey"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:textColor="#6C6C89"
            android:textFontWeight="400"
            android:textSize="12sp"
            android:text="@string/discover_tasty_and_healthy_receipt"
            tools:ignore="UnusedAttribute" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:id="@+id/search_bar"
            android:fontFamily="@font/inter"
            android:drawablePadding="16dp"
            android:paddingStart="16dp"
            android:gravity="center_vertical"
            android:paddingEnd="16dp"
            android:text="@string/search_any_recipe"
            android:textSize="16sp"
            android:textColor="#606F89"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:drawableStartCompat="@drawable/search_icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/discover"
            android:background="@drawable/search_bar"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/popularRecipe"
            android:text="@string/popular_recipes"
            app:layout_constraintTop_toBottomOf="@id/search_bar"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="16sp"
            android:fontFamily="@font/inter"
            android:textColor="#171B21"
            android:textStyle="bold"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            />
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16sp"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/popularRecipe"
            app:layout_constraintStart_toStartOf="parent"

            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/AllRecipie"
            android:text="@string/all_recipes"
            app:layout_constraintTop_toBottomOf="@id/recycler_view1"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="16sp"
            android:fontFamily="@font/inter"
            android:textColor="#171B21"
            android:textStyle="bold"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            />
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view2"
            android:layout_width="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/AllRecipie"
            app:layout_constraintStart_toStartOf="parent"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>