<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".Recipie_view">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF">

        <!-- Example ImageView -->
        <ImageView
            android:id="@+id/fragement_dish_image"
            android:layout_width="match_parent"
            android:layout_height="360dp"
            android:scaleType="centerCrop"
            android:src="@drawable/paneer"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/dish_image" />

        <View
            android:id="@+id/overlay"
            android:layout_width="match_parent"
            android:layout_height="360dp"
            android:background="@drawable/gradient_overlay"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/fragement_dish_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toBottomOf="@id/fragement_dish_image"
            app:layout_constraintStart_toStartOf="parent"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:fontFamily="@font/inter"
            android:text="This is another view"
            android:textStyle="bold"
            android:shadowColor="#99000000"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="4"
            />

        <!-- CardView Container Layout -->
        <LinearLayout
            android:id="@+id/card_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="16dp"
            app:layout_constraintTop_toBottomOf="@id/fragement_dish_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <!-- Card 1 -->
            <com.google.android.material.card.MaterialCardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#FFFFFF"
                app:cardCornerRadius="12dp"
                app:strokeWidth="1dp"
                app:cardElevation="0dp"
                app:strokeColor="#E7F0F8"
                android:layout_margin="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingVertical="12dp"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/ready_in_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Ready in"
                        android:fontFamily="@font/inter"
                        android:textSize="12sp"
                        android:textColor="#606F89"
                        />

                    <TextView
                        android:id="@+id/ready_in_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="25 min"
                        android:textSize="16sp"
                        android:textColor="#E54900"
                        android:textStyle="bold" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <!-- Card 2 -->
            <com.google.android.material.card.MaterialCardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:cardCornerRadius="12dp"
                android:backgroundTint="#FFFFFF"
                app:strokeWidth="1dp"
                app:cardElevation="0dp"
                app:strokeColor="#E7F0F8"
                android:layout_margin="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingVertical="12dp"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/serving"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Servings"
                        android:fontFamily="@font/inter"
                        android:textSize="12sp"
                        android:textColor="#606F89"
                        />

                    <TextView
                        android:id="@+id/serving_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="6"
                        android:textSize="16sp"
                        android:textColor="#E54900"
                        android:textStyle="bold" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <!-- Card 3 -->
            <com.google.android.material.card.MaterialCardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:cardCornerRadius="12dp"
                android:backgroundTint="#FFFFFF"
                app:strokeWidth="1dp"
                app:strokeColor="#E7F0F8"
                app:cardElevation="0dp"
                android:layout_margin="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingVertical="12dp"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/price_servings"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Price/Servings"
                        android:fontFamily="@font/inter"
                        android:textSize="12sp"
                        android:textColor="#606F89"
                        />

                    <TextView
                        android:id="@+id/price_servings_value"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="45"
                        android:textSize="16sp"
                        android:textColor="#E54900"
                        android:textStyle="bold" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ingredients"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card_container"
            android:text="@string/ingredients"
            android:textStyle="bold"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:textColor="#171B21"
            android:textSize="16sp"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ingredients_rv"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/ingredients"
            app:layout_constraintStart_toStartOf="parent"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/instruction_H"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ingredients_rv"
            android:text="@string/instructions"
            android:layout_marginStart="16dp"
            android:textColor="#171B21"
            android:layout_marginTop="16dp"
            android:textStyle="bold"
            android:textSize="16sp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/instructions"
            android:textSize="14sp"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:textFontWeight="400"
            android:lineHeight="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/instruction_H"
            android:textColor="#606f89"
            android:text="@string/llll"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/equipments_H"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/instructions"
            android:text="@string/equipments"
            android:layout_marginStart="16dp"
            android:textColor="#171B21"
            android:layout_marginTop="16dp"
            android:textStyle="bold"
            android:textSize="16sp"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/equipments_rv"
            app:layout_constraintTop_toBottomOf="@id/equipments_H"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/summary_H"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/equipments_rv"
            android:text="@string/quick_summary"
            android:layout_marginStart="16dp"
            android:textColor="#171B21"
            android:layout_marginTop="16dp"
            android:textStyle="bold"
            android:textSize="16sp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/summary"
            android:textSize="14sp"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintStart_toStartOf="parent"
            android:textFontWeight="400"
            android:lineHeight="20dp"
            app:layout_constraintTop_toBottomOf="@id/summary_H"
            android:textColor="#606f89"
            android:text="@string/llll"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
